# docterella

./: .gitignore  README.md  agent.py  benchmark.py  driver.py  pyproject.toml
scripts/: benchmark.py  format_outputs.py
src/docterella/: agent.py  output.py  parser.py  results.py  runner.py
src/docterella/agents/: base.py  config.py
src/docterella/components/: assessment.py  metadata.py  results.py
src/docterella/connections/: anthropic_connection.py  base_connection.py  ollama_connection.py  openai_connection.py
src/docterella/converters/: base_builder.py  google.py  numpy.py
src/docterella/docstrings/: docstring_builder.py  google.py  numpy.py
src/docterella/objects/: base_assessment.py  components.py  cot_assessment.py  reasoning.py  results.py
src/docterella/parsers/: class_parser.py  file_parser.py  function_parser.py  sequence_parser.py
src/docterella/prompts/: class_prompt.py  cot_class_prompt.py  cot_function_prompt.py  function_prompt.py  prompt_config.py  streamlined_class_prompt.py  streamlined_function_prompt.py
src/docterella/pydantic/: assessments.py  cot_assessment.py  metadata.py  reasoning.py  streamlined_assessments.py
src/docterella/reports/: json.py
src/docterella/validators/: agent.py  base_agent.py  config.py
tests/data/: class.py  class_responses.json  function_responses.json  functions.py
